Fix footer alignment

--- a/src/less/footer.less
+++ b/src/less/footer.less
@@ -4,7 +4,8 @@
     background-color: @background-dark;
     color: @color-dark;
     margin-top: @grid-gutter;
-    padding: @spacing-large;
+    padding-top: @spacing-large;
+    padding-bottom: @spacing-large;
 
     .content {
         overflow: visible;
